--- a/styles/custom_bino.css
+++ b/styles/custom_bino.css
@@ -135,6 +135,47 @@
   margin-bottom: 1.5rem;
 }
 
+.gray-circle-dashed-md-02 {
+  width: 60px;
+  height: 60px;
+  background: #ffffff;
+  border: 5px dashed #555555;
+  border-radius: 200px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+
+.total-gray-circle-dashed-md-02 h1 {
+  font-size: 1.2rem;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+.total-gray-circle-dashed-md-02 h2 {
+  font-size: 0.6rem;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+.total-gray-circle-dashed-md-02 h3 {
+  font-size: 0.5rem;
+  position: absolute;
+  top: 19%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
 /* END GRAY CIRCLE FULL DASHED */
 /* GREEN CIRCLE FULL */
 .green-circle {
@@ -175,33 +216,39 @@
 }
 
 .green-total-border-md h1 {
-  font-size: 1rem;
-  position: absolute;
-  top: 18%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0;
-  color: #000000;
+
+    font-size: 1.5rem;
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: #000000;
+
 }
 
 .green-total-border-md h2 {
-  font-size: 0.5rem;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0;
-  color: #000000;
+
+    font-size: 0.6rem;
+    position: absolute;
+    top: 72%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: #000000;
+
 }
 
 .green-total-border-md h3 {
-  font-size: 0.7rem;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0;
-  color: #000000;
+
+    font-size: 0.7rem;
+    position: absolute;
+    top: 26%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: #000000;
+
 }
 
 /* END GREEN CIRCLE FULL BORDER MD */
@@ -236,7 +283,7 @@
 }
 
 .oc-total h2 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   position: absolute;
   top: 55%;
   left: 50%;
@@ -265,6 +312,18 @@
   border-radius: 200px;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+
+.orange-circle-md-02 {
+  width: 60px;
+  height: 60px;
+  background: #fa4d06;
+  border: 1px solid #fa4d06;
+  border-radius: 200px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 0px;
   margin-bottom: 1.5rem;
 }
 
@@ -320,7 +379,7 @@
 }
 
 .oc-total-border h2 {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   position: absolute;
   top: 55%;
   left: 50%;
@@ -352,6 +411,17 @@
   margin-bottom: 1.5rem;
 }
 
+.orange-circle-border-md-02 {
+  width: 60px;
+  height: 60px;
+  background: #ffffff;
+  border: 4px solid #fa4d06;
+  border-radius: 200px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+
 .oc-total-border-md {
   text-align: center;
   height: 80px;
@@ -363,6 +433,26 @@
   font-size: 1.2rem;
   position: absolute;
   top: 37%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+.oc-total-border-md-02 h1 {
+  font-size: 1.2rem;
+  position: absolute;
+  top: 42%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+.oc-total-border-md-02 h3 {
+  font-size: 0.6rem;
+  position: absolute;
+  top: 24%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0;
@@ -383,6 +473,27 @@
   font-size: 0.6rem;
   position: absolute;
   top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+
+.oc-total-border-md-bt h1 {
+  font-size: 1.2rem;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  color: #000000;
+}
+
+.oc-total-border-md-bt h3 {
+  font-size: 0.6rem;
+  position: absolute;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0;
