--- a/styles/custom_bino.css
+++ b/styles/custom_bino.css
@@ -6,6 +6,14 @@
   text-align: left;
 }
 
+.tick-sad {
+  background: #fff url(../images/sad.png) no-repeat left .75rem center;
+  background-size: cover;
+  background-size: 20px;
+  border-radius: 0;
+  text-align: left;
+}
+
 .clearfix {
   overflow: auto;
 }
@@ -107,6 +115,14 @@ p {
 .table-white {
   background: #ffffff;
   color: #000000;
+}
+
+.table-white  .table td, .table th {
+
+    padding: 0.20rem;
+    vertical-align: middle;
+    border-top: 1px solid #dee2e6;
+
 }
 
 .table-orange thead {
